<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin" >

    <LinearLayout
        android:id="@+id/add_copy_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <RadioGroup
            android:id="@+id/media_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_vhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/vhs" />

            <RadioButton
                android:id="@+id/radio_dvd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dvd" />

            <RadioButton
                android:id="@+id/radio_bluray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluray" />

            <RadioButton
                android:id="@+id/radio_digital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital" />
        </RadioGroup>

        <Button
            android:id="@+id/add_copy_button"
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_copy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_copies_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/copies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_another_copy_button"
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_another_copy" />
    </LinearLayout>

</LinearLayout>