<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16.0dip" >

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_movie_title"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/year"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_movie_year"
                android:imeActionId="@+id/search_imdb"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/search_imdb_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip"
                android:paddingLeft="32.0dip"
                android:paddingRight="32.0dip"
                android:text="@string/add_movie_search_button" />
        </LinearLayout>
    </ScrollView>

</merge>